TGR-1173: happy sonar happy devar