@@ -11,17 +11,16 @@ import de.gematik.rbellogger.data.RbelElement;
 import de.gematik.rbellogger.data.facet.RbelJweFacet;
 import de.gematik.rbellogger.data.facet.RbelUriFacet;
 import de.gematik.rbellogger.data.facet.RbelUriParameterFacet;
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.stream.Collectors;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.Test;
 
-public class RbelUriConverterTest {
+class RbelUriConverterTest {
 
   @Test
-  public void convertAbsolutePathWithQueryParameters() {
+  void convertAbsolutePathWithQueryParameters() {
     final RbelElement rbelElement =
         RbelLogger.build()
             .getRbelConverter()
@@ -44,7 +43,7 @@ public class RbelUriConverterTest {
   }
 
   @Test
-  public void domainAndProtocolAndQuery_shouldConvertNested() {
+  void domainAndProtocolAndQuery_shouldConvertNested() {
     final RbelElement rbelElement =
         RbelLogger.build()
             .getRbelConverter()
@@ -68,7 +67,7 @@ public class RbelUriConverterTest {
   }
 
   @Test
-  public void urlEscapedParameterValues_shouldContainOriginalContent() {
+  void urlEscapedParameterValues_shouldContainOriginalContent() {
     final RbelElement rbelElement =
         RbelLogger.build()
             .getRbelConverter()
@@ -85,7 +84,7 @@ public class RbelUriConverterTest {
   }
 
   @Test
-  public void simpleUrlWithoutQuery() {
+  void simpleUrlWithoutQuery() {
     final RbelElement rbelElement =
         RbelLogger.build()
             .getRbelConverter()
@@ -98,9 +97,9 @@ public class RbelUriConverterTest {
   }
 
   @Test
-  public void longSpecialCaseParameter() throws UnsupportedEncodingException {
+  void longSpecialCaseParameter() {
     final String sourceParameter = RandomStringUtils.randomPrint(3000);
-    String specialCaseParameter = URLEncoder.encode(sourceParameter, StandardCharsets.UTF_8.name());
+    String specialCaseParameter = URLEncoder.encode(sourceParameter, StandardCharsets.UTF_8);
 
     final String basePath = "http://redirect.gematik.de/foo/bar";
     final String url = basePath + "?foo=" + specialCaseParameter + "&blub=blab";
@@ -116,7 +115,7 @@ public class RbelUriConverterTest {
   }
 
   @Test
-  public void emptyQueryPart_shouldParseCorrectly() {
+  void emptyQueryPart_shouldParseCorrectly() {
     final RbelElement rbelElement =
         RbelLogger.build().getRbelConverter().convertElement("/foobar?", null);
 
